--- a/index.html
+++ b/index.html
@@ -3,9 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CacheCash</title>
+    <link rel="icon" type="image/png" href="resource/Logo.svg">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="top">
+    <header>
+        <div class="item-first">
+            <h2>CacheCash</h2>
+        </div>
+        <div class="item-second">
+            <p>แอพฯ เพื่อการจัดการเงิน</p>
+            <p>แนะนำการใช้งาน</p>
+            <p>คำถามที่พบบ่อย</p>
+            <p>เกี่ยวกับเรา</p>
+        </div>
+        <div class="item-third">
+            <div class="prototype">
+                <p>TH</p>
+            </div>
+        </div>
+    </header>
+
+    <section class="recommend">
+        <div class="recommend-first">
+        <h2>ควบคุมการเงินคุณในมือ – ปลอดภัย ทันที</h2>
+        <p>แจ้งเตือนทุกการใช้จ่าย ตรวจสอบธุรกรรมก่อนโดนโกง</p>
+        <br/>
+        <a href="#" class="cta-button">ดูตัวอย่างแอพ</a>
+        </div>
+
+        <div class="recommend-second">
+            <img src="resource/backgroundone.svg" alt="">
+        </div>
+    </section>
+    </div>
+
+    <section class="section">
+    <h2>จุดเด่นของ CacheCash</h2>
+    <div class="features">
+      <div class="feature-box"
+        <h3>🔔 แจ้งเตือนเรียลไทม์</h3>
+        <p>รู้ทุกธุรกรรมทันทีที่เกิดขึ้น</p>
+      </div>
+      <div class="feature-box">
+        <h3>🔍 ตรวจลิงก์อันตราย</h3>
+        <p>สแกน QR / ลิงก์ก่อนโดนหลอก</p>
+      </div>
+      <div class="feature-box">
+        <h3>📊 รายงานการเงิน</h3>
+        <p>สรุปการใช้จ่ายรายวัน/รายเดือน</p>
+      </div>
+      <div class="feature-box">
+        <h3>🔐 ความปลอดภัยระดับธนาคาร</h3>
+        <p>เข้ารหัสข้อมูลทั้งหมด</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>ดูการทำงานของแอป</h2>
+    <p><em>วิดีโอตัวอย่างจะอยู่ตรงนี้ (ใส่ iframe ได้)</em></p>
+  </section>
+
+  <section class="section">
+    <h2>ผู้ใช้ว่าอย่างไร</h2>
+    <p>⭐⭐⭐⭐⭐ “แอปนี้ช่วยป้องกันผมจากการโดนหลอกหลายครั้ง!” – คุณต้น</p>
+    <p>📱 ผู้ใช้งานมากกว่า 50,000 คนทั่วไทย</p>
+  </section>
+
+  <section class="section faq">
+    <h2>คำถามที่พบบ่อย</h2>
+    <p><strong>แอปนี้ใช้ฟรีจริงไหม?</strong><br/>ใช่! ดาวน์โหลดและใช้งานได้ฟรี</p>
+    <p><strong>ข้อมูลของฉันปลอดภัยแค่ไหน?</strong><br/>เรารักษาความปลอดภัยด้วยการเข้ารหัสข้อมูลแบบเดียวกับธนาคาร</p>
+  </section>
+
+  <section class="section">
+    <a href="#" class="cta-button">เริ่มใช้งานเลย</a>
+  </section>
+
+  <footer>
+    <div class="requirement">
+        <!-- <img src="resource/LogoAppblack.svg" alt=""> -->
+         <div id="rq-one">
+            <p>&copy; CacheCash Corporation</p>
+        </div>
+        
+        <div id="rq-two">
+            <a href="#" >ช่วยเหลือ </a> 
+            <p>|</p>
+            <a href="#">ข้อกำหนดการใช้บริการ</a>
+            <p>|</p>
+            <a href="#">นโยบายความเป็นส่วนตัว</a>
+        </div>
+    </div>
+
+    <div class="contact">
+        <p>sdsskdsl</p>
+    </div>
+</footer>
+
+  <script src="main.js"></script>
 </body>
 </html>
