--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo_cachecashV2.png"  />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Logo.svg"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CacheCash</title>
+    <title>CacheCash - แอปพลิเคชันจัดการเงิน ได้ทั้งส่วนตัว หรือแบบกลุ่ม</title>
   </head>
   <body>
     <div id="root"></div>
