config logo web

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/Logo.svg"  />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logoCC.png"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CacheCash - แอปพลิเคชันจัดการเงิน ได้ทั้งส่วนตัว หรือแบบกลุ่ม</title>
   </head>
